--- a/home.html
+++ b/home.html
@@ -33,7 +33,8 @@
         <div class="navbar md:w-10/12 w-full mx-auto leading-7 md:leading-[110px]">
             <div class="navbar-start">
                 <div>
-                    <button id="sec-btn" class="btn md:px-8 text-[15px] md:text-xl font-semibold bg-[#B4F461]">Home</button>
+                    <button id="sec-btn"
+                        class="btn md:px-8 text-[15px] md:text-xl font-semibold bg-[#B4F461]">Home</button>
                 </div>
             </div>
             <div class="navbar-center text-xs">
@@ -54,21 +55,55 @@
     <main class="md:w-10/12 mx-auto w-full ">
         <div class="flex items-center">
             <h3 class="md:text-5xl text-xl p-5 font-extrabold text-left md:my-10 my-4">Important FAQ</h3>
-        <i class="fa-solid fa-question md:text-5xl text-xl"></i>
+            <!-- <i class="fa-solid fa-question md:text-5xl text-xl"></i> -->
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 128 128"
+                width="128" height="128" preserveAspectRatio="xMidYMid meet"
+                style="transform: translate3d(0px, 0px, 0px); content-visibility: visible;">
+                <defs>
+                    <clipPath id="__lottie_element_2">
+                        <rect width="128" height="128" x="0" y="0"></rect>
+                    </clipPath>
+                </defs>
+                <g clip-path="url(#__lottie_element_2)">
+                    <g transform="matrix(1,0,0,1,16.174999237060547,16.174999237060547)" opacity="1"
+                        style="display: block;">
+                        <g opacity="1" transform="matrix(1,0,0,1,47.82500076293945,47.82500076293945)">
+                            <path fill="rgb(35,31,32)" fill-opacity="1"
+                                d=" M0,47.57500076293945 C-26.232999801635742,47.57500076293945 -47.57500076293945,26.233999252319336 -47.57500076293945,0 C-47.57500076293945,-26.232999801635742 -26.232999801635742,-47.57500076293945 0,-47.57500076293945 C26.232999801635742,-47.57500076293945 47.57500076293945,-26.232999801635742 47.57500076293945,0 C47.57500076293945,26.233999252319336 26.232999801635742,47.57500076293945 0,47.57500076293945z M0,-39.57500076293945 C-21.82200050354004,-39.57500076293945 -39.57500076293945,-21.82200050354004 -39.57500076293945,0 C-39.57500076293945,21.82200050354004 -21.82200050354004,39.57500076293945 0,39.57500076293945 C21.82200050354004,39.57500076293945 39.57500076293945,21.82200050354004 39.57500076293945,0 C39.57500076293945,-21.82200050354004 21.82200050354004,-39.57500076293945 0,-39.57500076293945z">
+                            </path>
+                        </g>
+                    </g>
+                    <g transform="matrix(1,0,0,1,42.888999938964844,32.16600036621094)" opacity="1"
+                        style="display: block;">
+                        <g opacity="1" transform="matrix(1,0,0,1,21.111000061035156,31.833999633789062)">
+                            <path fill="rgb(0,0,0)" fill-opacity="1"
+                                d=" M-20.861000061035156,-14.145000457763672 C-20.861000061035156,-16.785999298095703 -20.01300048828125,-19.464000701904297 -18.31599998474121,-22.176000595092773 C-16.6200008392334,-24.88800048828125 -14.144000053405762,-27.134000778198242 -10.890999794006348,-28.913999557495117 C-7.636000156402588,-30.694000244140625 -3.8380000591278076,-31.583999633789062 0.5009999871253967,-31.583999633789062 C4.533999919891357,-31.583999633789062 8.093999862670898,-30.84000015258789 11.182000160217285,-29.35300064086914 C14.270000457763672,-27.86400032043457 16.65399932861328,-25.84000015258789 18.33799934387207,-23.2810001373291 C20.020000457763672,-20.722000122070312 20.861000061035156,-17.94099998474121 20.861000061035156,-14.937000274658203 C20.861000061035156,-12.572999954223633 20.381999969482422,-10.5 19.422000885009766,-8.720000267028809 C18.46299934387207,-6.940000057220459 17.320999145507812,-5.4029998779296875 16.000999450683594,-4.110000133514404 C14.680000305175781,-2.816999912261963 12.309000015258789,-0.6399999856948853 8.88700008392334,2.4200000762939453 C7.941999912261963,3.2820000648498535 7.183000087738037,4.039999961853027 6.613999843597412,4.692999839782715 C6.043000221252441,5.3470001220703125 5.618000030517578,5.945000171661377 5.340000152587891,6.48799991607666 C5.060999870300293,7.03000020980835 4.84499979019165,7.572000026702881 4.692999839782715,8.11400032043457 C4.539999961853027,8.657999992370605 4.310999870300293,9.609999656677246 4.00600004196167,10.972999572753906 C3.4769999980926514,13.866000175476074 1.8209999799728394,15.312000274658203 -0.9599999785423279,15.312000274658203 C-2.4070000648498535,15.312000274658203 -3.624000072479248,14.84000015258789 -4.611000061035156,13.892999649047852 C-5.598999977111816,12.947999954223633 -6.091000080108643,11.543000221252441 -6.091000080108643,9.680000305175781 C-6.091000080108643,7.3429999351501465 -5.730000019073486,5.318999767303467 -5.006999969482422,3.6089999675750732 C-4.283999919891357,1.8980000019073486 -3.3239998817443848,0.3959999978542328 -2.128000020980835,-0.8970000147819519 C-0.9319999814033508,-2.190999984741211 0.6809999942779541,-3.7269999980926514 2.7130000591278076,-5.507999897003174 C4.492000102996826,-7.065000057220459 5.7789998054504395,-8.239999771118164 6.572000026702881,-9.032999992370605 C7.364999771118164,-9.826000213623047 8.031999588012695,-10.708000183105469 8.574000358581543,-11.682999610900879 C9.116000175476074,-12.656000137329102 9.38700008392334,-13.711999893188477 9.38700008392334,-14.854000091552734 C9.38700008392334,-17.07900047302246 8.5600004196167,-18.95599937438965 6.90500020980835,-20.486000061035156 C5.25,-22.014999389648438 3.115000009536743,-22.7810001373291 0.5009999871253967,-22.7810001373291 C-2.559000015258789,-22.7810001373291 -4.811999797821045,-22.009000778198242 -6.257999897003174,-20.465999603271484 C-7.704999923706055,-18.922000885009766 -8.928000450134277,-16.64699935913086 -9.930000305175781,-13.642999649047852 C-10.87600040435791,-10.5 -12.668999671936035,-8.928999900817871 -15.312000274658203,-8.928999900817871 C-16.8700008392334,-8.928999900817871 -18.18400001525879,-9.477999687194824 -19.2549991607666,-10.57699966430664 C-20.326000213623047,-11.675999641418457 -20.861000061035156,-12.864999771118164 -20.861000061035156,-14.145000457763672z M-0.5009999871253967,31.583999633789062 C-2.1989998817443848,31.583999633789062 -3.677999973297119,31.034000396728516 -4.942999839782715,29.93600082397461 C-6.210000038146973,28.836999893188477 -6.8420000076293945,27.301000595092773 -6.8420000076293945,25.326000213623047 C-6.8420000076293945,23.572999954223633 -6.230999946594238,22.099000930786133 -5.006999969482422,20.902999877929688 C-3.7829999923706055,19.707000732421875 -2.2820000648498535,19.108999252319336 -0.5009999871253967,19.108999252319336 C1.2510000467300415,19.108999252319336 2.7260000705718994,19.707000732421875 3.921999931335449,20.902999877929688 C5.117000102996826,22.099000930786133 5.7170000076293945,23.572999954223633 5.7170000076293945,25.326000213623047 C5.7170000076293945,27.273000717163086 5.090000152587891,28.80299949645996 3.8389999866485596,29.915000915527344 C2.5869998931884766,31.027000427246094 1.1399999856948853,31.583999633789062 -0.5009999871253967,31.583999633789062z">
+                            </path>
+                        </g>
+                    </g>
+                </g>
+            </svg>
         </div>
         <div class="join join-vertical w-full">
             <div class="collapse collapse-arrow join-item border-base-300 border">
                 <input type="radio" name="my-accordion-4" checked="checked" />
                 <div class="collapse-title md:text-2xl text-lg font-semibold p-4">What is the DOM model ?</div>
                 <div class="collapse-content">
-                    <p>The DOM (Document Object Model) is a programming interface for HTML and XML documents. It represents the document structure as a tree of objects, where each node corresponds to elements, attributes, or text. Developers use the DOM to access, modify, and interact with elements in a webpage using languages like JavaScript. The DOM allows dynamic updates to the page's content, structure, and styles. Events like clicks or keypresses can be handled using DOM event listeners. The DOM provides a way to build interactive and responsive web applications</p>
+                    <p>The DOM (Document Object Model) is a programming interface for HTML and XML documents. It
+                        represents the document structure as a tree of objects, where each node corresponds to elements,
+                        attributes, or text. Developers use the DOM to access, modify, and interact with elements in a
+                        webpage using languages like JavaScript. The DOM allows dynamic updates to the page's content,
+                        structure, and styles. Events like clicks or keypresses can be handled using DOM event
+                        listeners. The DOM provides a way to build interactive and responsive web applications</p>
                 </div>
             </div>
             <div class="collapse collapse-arrow join-item border-base-300 border">
                 <input type="radio" name="my-accordion-4" />
-                <div class="collapse-title md:text-2xl text-lg font-semibold p-4">How do you select element form DOM ?</div>
+                <div class="collapse-title md:text-2xl text-lg font-semibold p-4">How do you select element form DOM ?
+                </div>
                 <div class="collapse-content">
-                    <p>To select elements from the DOM, JavaScript provides several methods. Here are some commonly used ones:
+                    <p>To select elements from the DOM, JavaScript provides several methods. Here are some commonly used
+                        ones:
                     </p>
                     <ol type="1">
                         <li>getElementById(id)</li>
@@ -82,16 +117,23 @@
             </div>
             <div class="collapse collapse-arrow join-item border-base-300 border">
                 <input type="radio" name="my-accordion-4" />
-                <div class="collapse-title md:text-2xl text-lg font-semibold p-4">What is event delegation in the context of DOM , and why it's useful ?</div>
+                <div class="collapse-title md:text-2xl text-lg font-semibold p-4">What is event delegation in the
+                    context of DOM , and why it's useful ?</div>
                 <div class="collapse-content">
-                    <p>Event delegation is a technique in JavaScript where you add a single event listener to a parent element instead of adding individual event listeners to each child element. The event listener on the parent captures events that bubble up from its children due to event propagation, specifically event bubbling. This allows handling events for dynamically added elements as well.</p>
+                    <p>Event delegation is a technique in JavaScript where you add a single event listener to a parent
+                        element instead of adding individual event listeners to each child element. The event listener
+                        on the parent captures events that bubble up from its children due to event propagation,
+                        specifically event bubbling. This allows handling events for dynamically added elements as well.
+                    </p>
                 </div>
             </div>
             <div class="collapse collapse-arrow join-item border-base-300 border">
                 <input type="radio" name="my-accordion-4" />
-                <div class="collapse-title md:text-2xl text-lg font-semibold p-4">How do you manipulate an Element's attributes and style using DOM ?</div>
+                <div class="collapse-title md:text-2xl text-lg font-semibold p-4">How do you manipulate an Element's
+                    attributes and style using DOM ?</div>
                 <div class="collapse-content">
-                    To manipulate an element's attributes and styles using the DOM, you can use JavaScript methods and properties. Here's how:
+                    To manipulate an element's attributes and styles using the DOM, you can use JavaScript methods and
+                    properties. Here's how:
                     <div class="">
                         <h1 class="text-lg font-medium">Attribute</h1>
                         <div>
@@ -103,7 +145,7 @@
                         <div>
                             1. Using style property – Directly change CSS properties of an element,
                             2.Using classList – Add, remove, or toggle CSS,
-                            3. Setting multiple styles at once – You can also use cssText to assign multiple styles 
+                            3. Setting multiple styles at once – You can also use cssText to assign multiple styles
                         </div>
                     </div>
                 </div>
